--- a/src/main/webapp/WEB-INF/jsp/skin/subhead.jspf
+++ b/src/main/webapp/WEB-INF/jsp/skin/subhead.jspf
@@ -1,12 +1,14 @@
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 
 <c:url var="homeUrl" value="/home.html" />
-<c:url var="registerUrl" value="/users/new.html" />
+<c:url var="accountUrl" value="/users/new.html" />
+<c:url var="registerUrl" value="/events/new.html" />
 
 <div id="subhd">
 	<div id="topNav">
 		<ul>
 			<li><a href="${homeUrl}">Home</a></li>
+			<li><a href="${accountUrl}">New Account</a></li>
 			<li><a href="${registerUrl}">Register</a></li>
 		</ul>
 	</div>
